<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.gingercake.nsn.main.home.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_postDetailFragment"
            app:destination="@id/postDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_homeFragment_to_newPostFragment"
            app:destination="@id/newPostFragment" app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.gingercake.nsn.main.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/hotPostsFragment"
        android:name="com.gingercake.nsn.main.hotposts.HotPostsFragment"
        android:label="@string/hot_posts"
        tools:layout="@layout/fragment_hot_posts" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.gingercake.nsn.main.profile.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_postDetailFragment"
            app:destination="@id/postDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profileFragment_to_newPostFragment"
            app:destination="@id/newPostFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.gingercake.nsn.main.postdetail.PostDetailFragment"
        android:label="Comments"
        tools:layout="@layout/fragment_post_detail">

        <argument android:name="postId" app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/newPostFragment"
        android:name="com.gingercake.nsn.main.newpost.NewPostFragment"
        android:label="@string/create_post"
        tools:layout="@layout/fragment_new_post" >
        <action
            android:id="@+id/action_newPostFragment_to_newPostSaleSettingFragment"
            app:destination="@id/newPostSaleSettingFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/newPostSaleSettingFragment"
        android:name="com.gingercake.nsn.main.newpost.NewPostSaleSettingFragment"
        android:label="@string/sale_settings"
        tools:layout="@layout/fragment_new_post_sale_setting">

        <argument android:name="postTitle" app:argType="string" />
        <argument android:name="postContent" app:argType="string" />
        <argument android:name="resourcePath" app:argType="string" />

    </fragment>
</navigation>