<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.newpost.NewPostFragment"
    android:background="@color/default_background_color"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/tealDark"
            app:startIconDrawable="@drawable/ic_baseline_title_24"
            app:startIconTint="@color/tealDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="140"
            android:hint="@string/post_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="140"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/tealDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/post_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:inputType="textMultiLine"
                android:gravity="top"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="0dp"
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:scaleType="fitCenter" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/attachBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach"
                app:icon="@drawable/ic_outline_add_a_photo_24"
                android:drawableTint="@color/grey1"
                android:backgroundTint="@color/colorSecondary"
                android:drawablePadding="0dp"
                android:layout_toStartOf="@id/nextBtn"
                android:layout_marginEnd="20dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
                android:drawableTint="@color/grey1"
                android:drawablePadding="0dp"
                android:paddingHorizontal="20dp"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>