<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="4dp"
    android:paddingHorizontal="8dp"
    android:background="@color/default_background_color">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/postCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/author_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/author_name"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/author_image"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/grey5"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/update_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_below="@id/author_name"
                    android:layout_toEndOf="@id/author_image"
                    android:textColor="@color/grey5"
                    android:textSize="13sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="17sp" />

            <pl.droidsonroids.gif.GifImageView
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="0dp"
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="6"
                android:ellipsize="end"
                android:textColor="#000"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="14dp">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:drawableLeft="@drawable/ic_baseline_attach_money_24"
                    android:textColor="@color/grey5"
                    android:text="10"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    app:drawableTint="@color/tealLight" />

                <TextView
                    android:id="@+id/like_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:drawableLeft="@drawable/ic_baseline_thumb_up_24"
                    android:drawablePadding="5dp"
                    android:textColor="@color/grey5"
                    android:text="10"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    app:drawableTint="@color/tealLight" />

                <TextView
                    android:id="@+id/comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/like_count"
                    android:layout_marginEnd="10dp"
                    android:paddingVertical="1dp"
                    android:drawableLeft="@drawable/ic_baseline_mode_comment_22"
                    android:drawablePadding="5dp"
                    android:textColor="@color/grey5"
                    android:text="10"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    app:drawableTint="@color/tealLight" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/like_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/like_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="start"
                        android:textColor="@color/grey5"
                        android:gravity="center_vertical"
                        android:drawableStart="@drawable/ic_baseline_thumb_up_24"
                        app:drawableTint="@color/tealDark"
                        android:drawablePadding="5dp"
                        android:text="@string/like"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/comment_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="11dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:textColor="@color/grey5"
                        android:drawableStart="@drawable/ic_baseline_mode_comment_22"
                        app:drawableTint="@color/tealDark"
                        android:drawablePadding="5dp"
                        android:paddingRight="2dp"
                        android:text="@string/comment"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buy_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="end"
                        android:gravity="center_vertical"
                        android:textColor="@color/grey5"
                        android:drawableStart="@drawable/ic_baseline_shopping_basket_24"
                        app:drawableTint="@color/tealDark"
                        android:drawablePadding="5dp"
                        android:text="@string/buy"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>